--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 
   <section class="terhindar">
     <div class="container p-5">
-      <div class="row">
-        <div class="col-12" style="margin-top: 90px">
-          <h1 class="text-center" style="color: #2B246C; font-family: Poppins; font-weight: bolder;">CARA TERHINDAR <br> DARI VIRUS COVID-19</h1>    
+      <div class="row mt-3">
+        <div class="col-12 mt-3 mb-5">
+          <h1 class="text-center" style="color: #2B246C; font-family: Poppins; font-weight: bolder; font-size: 35px;">CARA TERHINDAR <br> DARI VIRUS COVID-19</h1>    
         </div>
       </div>
       <div id="prevIcon" style="cursor: pointer;"><i class="fas fa-arrow-left"></i></div>
